src/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statement statements
Rule 3     statements -> statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> expression SEMI
Rule 7     statement -> if_stmt
Rule 8     statement -> while_stmt
Rule 9     statement -> for_stmt
Rule 10    statement -> output_stmt
Rule 11    statement -> input_stmt
Rule 12    statement -> func_decl
Rule 13    statement -> return_stmt
Rule 14    statement -> func_call_stmt
Rule 15    statement -> break_stmt
Rule 16    statement -> continue_stmt
Rule 17    statement -> adt_decl
Rule 18    declaration -> type ID SEMI
Rule 19    declaration -> type ID ASSIGN expression SEMI
Rule 20    declaration -> type ID LBRACKET expression RBRACKET SEMI
Rule 21    type -> INT_TYPE
Rule 22    type -> FLOAT_TYPE
Rule 23    type -> STRING_TYPE
Rule 24    type -> BOOL_TYPE
Rule 25    type -> CHAR_TYPE
Rule 26    type -> VOID_TYPE
Rule 27    type -> ID
Rule 28    expression -> expression PLUS expression
Rule 29    expression -> expression MINUS expression
Rule 30    expression -> expression TIMES expression
Rule 31    expression -> expression DIVIDE expression
Rule 32    expression -> expression MOD expression
Rule 33    expression -> expression AND expression
Rule 34    expression -> expression OR expression
Rule 35    expression -> expression EQ expression
Rule 36    expression -> expression NEQ expression
Rule 37    expression -> expression LT expression
Rule 38    expression -> expression LE expression
Rule 39    expression -> expression GT expression
Rule 40    expression -> expression GE expression
Rule 41    expression -> expression BIT_AND expression
Rule 42    expression -> expression BIT_OR expression
Rule 43    expression -> expression BIT_XOR expression
Rule 44    expression -> expression SHIFT_LEFT expression
Rule 45    expression -> expression SHIFT_RIGHT expression
Rule 46    expression -> MINUS expression
Rule 47    expression -> NOT expression
Rule 48    expression -> BIT_NOT expression
Rule 49    expression -> INCREMENT expression
Rule 50    expression -> DECREMENT expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> INTEGER
Rule 53    expression -> FLOAT
Rule 54    expression -> ID
Rule 55    expression -> ID LBRACKET expression RBRACKET
Rule 56    expression -> ID DOT ID
Rule 57    expression -> func_call
Rule 58    expression -> STRING
Rule 59    expression -> TRUE
Rule 60    expression -> FALSE
Rule 61    param_list_opt -> param_list
Rule 62    param_list_opt -> empty
Rule 63    param_list -> param COMMA param_list
Rule 64    param_list -> param
Rule 65    param -> type ID
Rule 66    param -> type ID LBRACKET RBRACKET
Rule 67    return_stmt -> RETURN expression SEMI
Rule 68    return_stmt -> RETURN SEMI
Rule 69    func_call_stmt -> func_call SEMI
Rule 70    func_call -> ID LPAREN arg_list_opt RPAREN
Rule 71    func_call -> ID DOT ID LPAREN arg_list_opt RPAREN
Rule 72    func_decl -> func_start statements ENDFUNC
Rule 73    func_start -> FUNC ID LPAREN param_list_opt RPAREN COLON
Rule 74    arg_list_opt -> arg_list
Rule 75    arg_list_opt -> empty
Rule 76    arg_list -> arg COMMA arg_list
Rule 77    arg_list -> arg
Rule 78    arg -> ID
Rule 79    arg -> expression
Rule 80    adt_head -> ADT ID LPAREN param_list_opt RPAREN COLON
Rule 81    adt_decl -> adt_head adt_body ENDADT
Rule 82    adt_body -> visibility_block adt_body
Rule 83    adt_body -> visibility_block
Rule 84    visibility_block -> PRIVATE COLON member_list
Rule 85    visibility_block -> PUBLIC COLON member_list
Rule 86    member_list -> member_decl member_list
Rule 87    member_list -> member_decl
Rule 88    member_decl -> type ID SEMI
Rule 89    member_decl -> func_decl
Rule 90    assignment -> lvalue ASSIGN expression SEMI
Rule 91    lvalue -> ID
Rule 92    lvalue -> ID DOT ID
Rule 93    lvalue -> ID LBRACKET expression RBRACKET
Rule 94    for_stmt -> for_header statements ENDFOR
Rule 95    for_header -> FOR LPAREN ID IN expression RANGE expression RPAREN COLON
Rule 96    break_stmt -> BREAK SEMI
Rule 97    continue_stmt -> CONTINUE SEMI
Rule 98    if_stmt -> IF LPAREN expression RPAREN COLON statements ENDIF
Rule 99    if_stmt -> IF LPAREN expression RPAREN COLON statements ELSE COLON statements ENDIF
Rule 100   while_stmt -> WHILE LPAREN expression RPAREN COLON statements ENDWHILE
Rule 101   output_stmt -> OUTPUT expression SEMI
Rule 102   statement -> ID LPAREN expression RPAREN SEMI
Rule 103   input_stmt -> INPUT ID SEMI
Rule 104   empty -> <empty>

Terminals, with rules where they appear

ADT                  : 80
AND                  : 33
ASSIGN               : 19 90
BIT_AND              : 41
BIT_NOT              : 48
BIT_OR               : 42
BIT_XOR              : 43
BOOL_TYPE            : 24
BREAK                : 96
CHAR_TYPE            : 25
COLON                : 73 80 84 85 95 98 99 99 100
COMMA                : 63 76
CONTINUE             : 97
DECREMENT            : 50
DIVIDE               : 31
DOT                  : 56 71 92
ELSE                 : 99
ENDADT               : 81
ENDFOR               : 94
ENDFUNC              : 72
ENDIF                : 98 99
ENDWHILE             : 100
EQ                   : 35
FALSE                : 60
FLOAT                : 53
FLOAT_TYPE           : 22
FOR                  : 95
FUNC                 : 73
GE                   : 40
GT                   : 39
ID                   : 18 19 20 27 54 55 56 56 65 66 70 71 71 73 78 80 88 91 92 92 93 95 102 103
IF                   : 98 99
IN                   : 95
INCREMENT            : 49
INPUT                : 103
INTEGER              : 52
INT_TYPE             : 21
LBRACKET             : 20 55 66 93
LE                   : 38
LPAREN               : 51 70 71 73 80 95 98 99 100 102
LT                   : 37
MINUS                : 29 46
MOD                  : 32
NEQ                  : 36
NOT                  : 47
OR                   : 34
OUTPUT               : 101
PLUS                 : 28
PRIVATE              : 84
PUBLIC               : 85
RANGE                : 95
RBRACKET             : 20 55 66 93
RETURN               : 67 68
RPAREN               : 51 70 71 73 80 95 98 99 100 102
SEMI                 : 6 18 19 20 67 68 69 88 90 96 97 101 102 103
SHIFT_LEFT           : 44
SHIFT_RIGHT          : 45
STRING               : 58
STRING_TYPE          : 23
TIMES                : 30
TRUE                 : 59
VOID_TYPE            : 26
WHILE                : 100
error                : 

Nonterminals, with rules where they appear

adt_body             : 81 82
adt_decl             : 17
adt_head             : 81
arg                  : 76 77
arg_list             : 74 76
arg_list_opt         : 70 71
assignment           : 5
break_stmt           : 15
continue_stmt        : 16
declaration          : 4
empty                : 62 75
expression           : 6 19 20 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 48 49 50 51 55 67 79 90 93 95 95 98 99 100 101 102
for_header           : 94
for_stmt             : 9
func_call            : 57 69
func_call_stmt       : 14
func_decl            : 12 89
func_start           : 72
if_stmt              : 7
input_stmt           : 11
lvalue               : 90
member_decl          : 86 87
member_list          : 84 85 86
output_stmt          : 10
param                : 63 64
param_list           : 61 63
param_list_opt       : 73 80
program              : 0
return_stmt          : 13
statement            : 2 3
statements           : 1 2 72 94 98 99 99 100
type                 : 18 19 20 65 66 88
visibility_block     : 82 83
while_stmt           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . expression SEMI
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . for_stmt
    (10) statement -> . output_stmt
    (11) statement -> . input_stmt
    (12) statement -> . func_decl
    (13) statement -> . return_stmt
    (14) statement -> . func_call_stmt
    (15) statement -> . break_stmt
    (16) statement -> . continue_stmt
    (17) statement -> . adt_decl
    (102) statement -> . ID LPAREN expression RPAREN SEMI
    (18) declaration -> . type ID SEMI
    (19) declaration -> . type ID ASSIGN expression SEMI
    (20) declaration -> . type ID LBRACKET expression RBRACKET SEMI
    (90) assignment -> . lvalue ASSIGN expression SEMI
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression BIT_AND expression
    (42) expression -> . expression BIT_OR expression
    (43) expression -> . expression BIT_XOR expression
    (44) expression -> . expression SHIFT_LEFT expression
    (45) expression -> . expression SHIFT_RIGHT expression
    (46) expression -> . MINUS expression
    (47) expression -> . NOT expression
    (48) expression -> . BIT_NOT expression
    (49) expression -> . INCREMENT expression
    (50) expression -> . DECREMENT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . FLOAT
    (54) expression -> . ID
    (55) expression -> . ID LBRACKET expression RBRACKET
    (56) expression -> . ID DOT ID
    (57) expression -> . func_call
    (58) expression -> . STRING
    (59) expression -> . TRUE
    (60) expression -> . FALSE
    (98) if_stmt -> . IF LPAREN expression RPAREN COLON statements ENDIF
    (99) if_stmt -> . IF LPAREN expression RPAREN COLON statements ELSE COLON statements ENDIF
    (100) while_stmt -> . WHILE LPAREN expression RPAREN COLON statements ENDWHILE
    (94) for_stmt -> . for_header statements ENDFOR
    (101) output_stmt -> . OUTPUT expression SEMI
    (103) input_stmt -> . INPUT ID SEMI
    (72) func_decl -> . func_start statements ENDFUNC
    (67) return_stmt -> . RETURN expression SEMI
    (68) return_stmt -> . RETURN SEMI
    (69) func_call_stmt -> . func_call SEMI
    (96) break_stmt -> . BREAK SEMI
    (97) continue_stmt -> . CONTINUE SEMI
    (81) adt_decl -> . adt_head adt_body ENDADT
    (21) type -> . INT_TYPE
    (22) type -> . FLOAT_TYPE
    (23) type -> . STRING_TYPE
    (24) type -> . BOOL_TYPE
    (25) type -> . CHAR_TYPE
    (26) type -> . VOID_TYPE
    (27) type -> . ID
    (91) lvalue -> . ID
    (92) lvalue -> . ID DOT ID
    (93) lvalue -> . ID LBRACKET expression RBRACKET
    (70) func_call -> . ID LPAREN arg_list_opt RPAREN
    (71) func_call -> . ID DOT ID LPAREN arg_list_opt RPAREN
    (95) for_header -> . FOR LPAREN ID IN expression RANGE expression RPAREN COLON
    (73) func_start -> . FUNC ID LPAREN param_list_opt RPAREN COLON
    (80) adt_head -> . ADT ID LPAREN param_list_opt RPAREN COLON

    ID              shift and go to state 18
    MINUS           shift and go to state 22
    NOT             shift and go to state 23
    BIT_NOT         shift and go to state 24
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26
    LPAREN          shift and go to state 19
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    OUTPUT          shift and go to state 36
    INPUT           shift and go to state 37
    RETURN          shift and go to state 39
    BREAK           shift and go to state 40
    CONTINUE        shift and go to state 41
    INT_TYPE        shift and go to state 43
    FLOAT_TYPE      shift and go to state 44
    STRING_TYPE     shift and go to state 45
    BOOL_TYPE       shift and go to state 46
    CHAR_TYPE       shift and go to state 47
    VOID_TYPE       shift and go to state 48
    FOR             shift and go to state 49
    FUNC            shift and go to state 50
    ADT             shift and go to state 51

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    expression                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    for_stmt                       shift and go to state 9
    output_stmt                    shift and go to state 10
    input_stmt                     shift and go to state 11
    func_decl                      shift and go to state 12
    return_stmt                    shift and go to state 13
    func_call_stmt                 shift and go to state 14
    break_stmt                     shift and go to state 15
    continue_stmt                  shift and go to state 16
    adt_decl                       shift and go to state 17
    type                           shift and go to state 20
    lvalue                         shift and go to state 21
    func_call                      shift and go to state 29
    for_header                     shift and go to state 35
    func_start                     shift and go to state 38
    adt_head                       shift and go to state 42

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .

    $end            reduce using rule 1 (program -> statements .)


state 3

    (2) statements -> statement . statements
    (3) statements -> statement .
    (2) statements -> . statement statements
    (3) statements -> . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . expression SEMI
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . for_stmt
    (10) statement -> . output_stmt
    (11) statement -> . input_stmt
    (12) statement -> . func_decl
    (13) statement -> . return_stmt
    (14) statement -> . func_call_stmt
    (15) statement -> . break_stmt
    (16) statement -> . continue_stmt
    (17) statement -> . adt_decl
    (102) statement -> . ID LPAREN expression RPAREN SEMI
    (18) declaration -> . type ID SEMI
    (19) declaration -> . type ID ASSIGN expression SEMI
    (20) declaration -> . type ID LBRACKET expression RBRACKET SEMI
    (90) assignment -> . lvalue ASSIGN expression SEMI
    (28) expression -> . expression PLUS expression
    (29) expression -> . expression MINUS expression
    (30) expression -> . expression TIMES expression
    (31) expression -> . expression DIVIDE expression
    (32) expression -> . expression MOD expression
    (33) expression -> . expression AND expression
    (34) expression -> . expression OR expression
    (35) expression -> . expression EQ expression
    (36) expression -> . expression NEQ expression
    (37) expression -> . expression LT expression
    (38) expression -> . expression LE expression
    (39) expression -> . expression GT expression
    (40) expression -> . expression GE expression
    (41) expression -> . expression BIT_AND expression
    (42) expression -> . expression BIT_OR expression
    (43) expression -> . expression BIT_XOR expression
    (44) expression -> . expression SHIFT_LEFT expression
    (45) expression -> . expression SHIFT_RIGHT expression
    (46) expression -> . MINUS expression
    (47) expression -> . NOT expression
    (48) expression -> . BIT_NOT expression
    (49) expression -> . INCREMENT expression
    (50) expression -> . DECREMENT expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . INTEGER
    (53) expression -> . FLOAT
    (54) expression -> . ID
    (55) expression -> . ID LBRACKET expression RBRACKET
    (56) expression -> . ID DOT ID
    (57) expression -> . func_call
    (58) expression -> . STRING
    (59) expression -> . TRUE
    (60) expression -> . FALSE
    (98) if_stmt -> . IF LPAREN expression RPAREN COLON statements ENDIF
    (99) if_stmt -> . IF LPAREN expression RPAREN COLON statements ELSE COLON statements ENDIF
    (100) while_stmt -> . WHILE LPAREN expression RPAREN COLON statements ENDWHILE
    (94) for_stmt -> . for_header statements ENDFOR
    (101) output_stmt -> . OUTPUT expression SEMI
    (103) input_stmt -> . INPUT ID SEMI
    (72) func_decl -> . func_start statements ENDFUNC
    (67) return_stmt -> . RETURN expression SEMI
    (68) return_stmt -> . RETURN SEMI
    (69) func_call_stmt -> . func_call SEMI
    (96) break_stmt -> . BREAK SEMI
    (97) continue_stmt -> . CONTINUE SEMI
    (81) adt_decl -> . adt_head adt_body ENDADT
    (21) type -> . INT_TYPE
    (22) type -> . FLOAT_TYPE
    (23) type -> . STRING_TYPE
    (24) type -> . BOOL_TYPE
    (25) type -> . CHAR_TYPE
    (26) type -> . VOID_TYPE
    (27) type -> . ID
    (91) lvalue -> . ID
    (92) lvalue -> . ID DOT ID
    (93) lvalue -> . ID LBRACKET expression RBRACKET
    (70) func_call -> . ID LPAREN arg_list_opt RPAREN
    (71) func_call -> . ID DOT ID LPAREN arg_list_opt RPAREN
    (95) for_header -> . FOR LPAREN ID IN expression RANGE expression RPAREN COLON
    (73) func_start -> . FUNC ID LPAREN param_list_opt RPAREN COLON
    (80) adt_head -> . ADT ID LPAREN param_list_opt RPAREN COLON

    $end            reduce using rule 3 (statements -> statement .)
    ENDFOR          reduce using rule 3 (statements -> statement .)
    ENDFUNC         reduce using rule 3 (statements -> statement .)
    ENDIF           reduce using rule 3 (statements -> statement .)
    ELSE            reduce using rule 3 (statements -> statement .)
    ENDWHILE        reduce using rule 3 (statements -> statement .)
    ID              shift and go to state 18
    MINUS           shift and go to state 22
    NOT             shift and go to state 23
    BIT_NOT         shift and go to state 24
    INCREMENT       shift and go to state 25
    DECREMENT       shift and go to state 26
    LPAREN          shift and go to state 19
    INTEGER         shift and go to state 27
    FLOAT           shift and go to state 28
    STRING          shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 32
    IF              shift and go to state 33
    WHILE           shift and go to state 34
    OUTPUT          shift and go to state 36
    INPUT           shift and go to state 37
    RETURN          shift and go to state 39
    BREAK           shift and go to state 40
    CONTINUE        shift and go to state 41
    INT_TYPE        shift and go to state 43
    FLOAT_TYPE      shift and go to state 44
    STRING_TYPE     shift and go to state 45
    BOOL_TYPE       shift and go to state 46
    CHAR_TYPE       shift and go to state 47
    VOID_TYPE       shift and go to state 48
    FOR             shift and go to state 49
    FUNC            shift and go to state 50
    ADT             shift and go to state 51

    statement                      shift and go to state 3
    statements                     shift and go to state 52
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    expression                     shift and go to state 6
    if_stmt                        shift and go to state 7
    while_stmt                     shift and go to state 8
    for_stmt                       shift and go to state 9
    output_stmt                    shift and go to state 10
    input_stmt                     shift and go to state 11
    func_decl                      shift and go to state 12
    return_stmt                    shift and go to state 13
    func_call_stmt                 shift and go to state 14
    break_stmt                     shift and go to state 15
    continue_stmt                  shift and go to state 16
    adt_decl                       shift and go to state 17
    type                           shift and go to state 20
    lvalue                         shift and go to state 21
    func_call                      shift and go to state 29
    for_header                     shift and go to state 35
    func_start                     shift and go to state 38
    adt_head                       shift and go to state 42

state 4

    (4) statement -> declaration .

    ID              reduce using rule 4 (statement -> declaration .)
    MINUS           reduce using rule 4 (statement -> declaration .)
    NOT             reduce using rule 4 (statement -> declaration .)
    BIT_NOT         reduce using rule 4 (statement -> declaration .)
    INCREMENT       reduce using rule 4 (statement -> declaration .)
    DECREMENT       reduce using rule 4 (statement -> declaration .)
    LPAREN          reduce using rule 4 (statement -> declaration .)
    INTEGER         reduce using rule 4 (statement -> declaration .)
    FLOAT           reduce using rule 4 (statement -> declaration .)
    STRING          reduce using rule 4 (statement -> declaration .)
    TRUE            reduce using rule 4 (statement -> declaration .)
    FALSE           reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    OUTPUT          reduce using rule 4 (statement -> declaration .)
    INPUT           reduce using rule 4 (statement -> declaration .)
    RETURN          reduce using rule 4 (statement -> declaration .)
    BREAK           reduce using rule 4 (statement -> declaration .)
    CONTINUE        reduce using rule 4 (statement -> declaration .)
    INT_TYPE        reduce using rule 4 (statement -> declaration .)
    FLOAT_TYPE      reduce using rule 4 (statement -> declaration .)
    STRING_TYPE     reduce using rule 4 (statement -> declaration .)
    BOOL_TYPE       reduce using rule 4 (statement -> declaration .)
    CHAR_TYPE       reduce using rule 4 (statement -> declaration .)
    VOID_TYPE       reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    FUNC            reduce using rule 4 (statement -> declaration .)
    ADT             reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    ENDFOR          reduce using rule 4 (statement -> declaration .)
    ENDFUNC         reduce using rule 4 (statement -> declaration .)
    ENDIF           reduce using rule 4 (statement -> declaration .)
    ELSE            reduce using rule 4 (statement -> declaration .)
    ENDWHILE        reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    ID              reduce using rule 5 (statement -> assignment .)
    MINUS           reduce using rule 5 (statement -> assignment .)
    NOT             reduce using rule 5 (statement -> assignment .)
    BIT_NOT         reduce using rule 5 (statement -> assignment .)
    INCREMENT       reduce using rule 5 (statement -> assignment .)
    DECREMENT       reduce using rule 5 (statement -> assignment .)
    LPAREN          reduce using rule 5 (statement -> assignment .)
    INTEGER         reduce using rule 5 (statement -> assignment .)
    FLOAT           reduce using rule 5 (statement -> assignment .)
    STRING          reduce using rule 5 (statement -> assignment .)
    TRUE            reduce using rule 5 (statement -> assignment .)
    FALSE           reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    OUTPUT          reduce using rule 5 (statement -> assignment .)
    INPUT           reduce using rule 5 (statement -> assignment .)
    RETURN          reduce using rule 5 (statement -> assignment .)
    BREAK           reduce using rule 5 (statement -> assignment .)
    CONTINUE        reduce using rule 5 (statement -> assignment .)
    INT_TYPE        reduce using rule 5 (statement -> assignment .)
    FLOAT_TYPE      reduce using rule 5 (statement -> assignment .)
    STRING_TYPE     reduce using rule 5 (statement -> assignment .)
    BOOL_TYPE       reduce using rule 5 (statement -> assignment .)
    CHAR_TYPE       reduce using rule 5 (statement -> assignment .)
    VOID_TYPE       reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    FUNC            reduce using rule 5 (statement -> assignment .)
    ADT             reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    ENDFOR          reduce using rule 5 (statement -> assignment .)
    ENDFUNC         reduce using rule 5 (statement -> assignment .)
    ENDIF           reduce using rule 5 (statement -> assignment .)
    ELSE            reduce using rule 5 (statement -> assignment .)
    ENDWHILE        reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> expression . SEMI
    (28) expression -> expression . PLUS expression
    (29) expression -> expression . MINUS expression
    (30) expression -> expression . TIMES expression
    (31) expression -> expression . DIVIDE expression
    (32) expression -> expression . MOD expression
    (33) expression -> expression . AND expression
    (34) expression -> expression . OR expression
    (35) expression -> expression . EQ expression
    (36) expression -> expression . NEQ expression
    (37) expression -> expression . LT expression
    (38) expression -> expression . LE expression
    (39) expression -> expression . GT expression
    (40) expression -> expression . GE expression
    (41) expression -> expression . BIT_AND expression
    (42) expression -> expression . BIT_OR expression
    (43) expression -> expression . BIT_XOR expression
    (44) expression -> expression . SHIFT_LEFT expression
    (45) expression -> expression . SHIFT_RIGHT expression

    SEMI            shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    TIMES           shift and go to state 56
    DIVIDE          shift and go to state 57
    MOD             shift and go to state 58
    AND             shift and go to state 59
    OR              shift and go to state 60
    EQ              shift and go to state 61
    NEQ             shift and go to state 62
    LT              shift and go to state 63
    LE              shift and go to state 64
    GT              shift and go to state 65
    GE              shift and go to state 66
    BIT_AND         shift and go to state 67
    BIT_OR          shift and go to state 68
    BIT_XOR         shift and go to state 69
    SHIFT_LEFT      shift and go to state 70
    SHIFT_RIGHT     shift and go to state 71


state 7

    (7) statement -> if_stmt .

    ID              reduce using rule 7 (statement -> if_stmt .)
    MINUS           reduce using rule 7 (statement -> if_stmt .)
    NOT             reduce using rule 7 (statement -> if_stmt .)
    BIT_NOT         reduce using rule 7 (statement -> if_stmt .)
    INCREMENT       reduce using rule 7 (statement -> if_stmt .)
    DECREMENT       reduce using rule 7 (statement -> if_stmt .)
    LPAREN          reduce using rule 7 (statement -> if_stmt .)
    INTEGER         reduce using rule 7 (statement -> if_stmt .)
    FLOAT           reduce using rule 7 (statement -> if_stmt .)
    STRING          reduce using rule 7 (statement -> if_stmt .)
    TRUE            reduce using rule 7 (statement -> if_stmt .)
    FALSE           reduce using rule 7 (statement -> if_stmt .)
    IF              reduce using rule 7 (statement -> if_stmt .)
    WHILE           reduce using rule 7 (statement -> if_stmt .)
    OUTPUT          reduce using rule 7 (statement -> if_stmt .)
    INPUT           reduce using rule 7 (statement -> if_stmt .)
    RETURN          reduce using rule 7 (statement -> if_stmt .)
    BREAK           reduce using rule 7 (statement -> if_stmt .)
    CONTINUE        reduce using rule 7 (statement -> if_stmt .)
    INT_TYPE        reduce using rule 7 (statement -> if_stmt .)
    FLOAT_TYPE      reduce using rule 7 (statement -> if_stmt .)
    STRING_TYPE     reduce using rule 7 (statement -> if_stmt .)
    BOOL_TYPE       reduce using rule 7 (statement -> if_stmt .)
    CHAR_TYPE       reduce using rule 7 (statement -> if_stmt .)
    VOID_TYPE       reduce using rule 7 (statement -> if_stmt .)
    FOR             reduce using rule 7 (statement -> if_stmt .)
    FUNC            reduce using rule 7 (statement -> if_stmt .)
    ADT             reduce using rule 7 (statement -> if_stmt .)
    $end            reduce using rule 7 (statement -> if_stmt .)
    ENDFOR          reduce using rule 7 (statement -> if_stmt .)
    ENDFUNC         reduce using rule 7 (statement -> if_stmt .)
    ENDIF           reduce using rule 7 (statement -> if_stmt .)
    ELSE            reduce using rule 7 (statement -> if_stmt .)
    ENDWHILE        reduce using rule 7 (statement -> if_stmt .)


state 8

    (8) statement -> while_stmt .

    ID              reduce using rule 8 (statement -> while_stmt .)
    MINUS           reduce using rule 8 (statement -> while_stmt .)
    NOT             reduce using rule 8 (statement -> while_stmt .)
    BIT_NOT         reduce using rule 8 (statement -> while_stmt .)
    INCREMENT       reduce using rule 8 (statement -> while_stmt .)
    DECREMENT       reduce using rule 8 (statement -> while_stmt .)
    LPAREN          reduce using rule 8 (statement -> while_stmt .)
    INTEGER         reduce using rule 8 (statement -> while_stmt .)
    FLOAT           reduce using rule 8 (statement -> while_stmt .)
    STRING          reduce using rule 8 (statement -> while_stmt .)
    TRUE            reduce using rule 8 (statement -> while_stmt .)
    FALSE           reduce using rule 8 (statement -> while_stmt .)
    IF              reduce using rule 8 (statement -> while_stmt .)
    WHILE           reduce using rule 8 (statement -> while_stmt .)
    OUTPUT          reduce using rule 8 (statement -> while_stmt .)
    INPUT           reduce using rule 8 (statement -> while_stmt .)
    RETURN          reduce using rule 8 (statement -> while_stmt .)
    BREAK           reduce using rule 8 (statement -> while_stmt .)
    CONTINUE        reduce using rule 8 (statement -> while_stmt .)
    INT_TYPE        reduce using rule 8 (statement -> while_stmt .)
    FLOAT_TYPE      reduce using rule 8 (statement -> while_stmt .)
    STRING_TYPE     reduce using rule 8 (statement -> while_stmt .)
    BOOL_TYPE       reduce using rule 8 (statement -> while_stmt .)
    CHAR_TYPE       reduce using rule 8 (statement -> while_stmt .)
    VOID_TYPE       reduce using rule 8 (statement -> while_stmt .)
    FOR             reduce using rule 8 (statement -> while_stmt .)
    FUNC            reduce using rule 8 (statement -> while_stmt .)
    ADT             reduce using rule 8 (statement -> while_stmt .)
    $end            reduce using rule 8 (statement -> while_stmt .)
    ENDFOR          reduce using rule 8 (statement -> while_stmt .)
    ENDFUNC         reduce using rule 8 (statement -> while_stmt .)
    ENDIF           reduce using rule 8 (statement -> while_stmt .)
    ELSE            reduce using rule 8 (statement -> while_stmt .)
    ENDWHILE        reduce using rule 8 (statement -> while_stmt .)


state 9

    (9) statement -> for_stmt .

    ID              reduce using rule 9 (statement -> for_stmt .)
    MINUS           reduce using rule 9 (statement -> for_stmt .)
    NOT             reduce using rule 9 (statement -> for_stmt .)
    BIT_NOT         reduce using rule 9 (statement -> for_stmt .)
    INCREMENT       reduce using rule 9 (statement -> for_stmt .)
    DECREMENT       reduce using rule 9 (statement -> for_stmt .)
    LPAREN          reduce using rule 9 (statement -> for_stmt .)
    INTEGER         reduce using rule 9 (statement -> for_stmt .)
    FLOAT           reduce using rule 9 (statement -> for_stmt .)
    STRING          reduce using rule 9 (statement -> for_stmt .)
    TRUE            reduce using rule 9 (statement -> for_stmt .)
    FALSE           reduce using rule 9 (statement -> for_stmt .)
    IF              reduce using rule 9 (statement -> for_stmt .)
    WHILE           reduce using rule 9 (statement -> for_stmt .)
    OUTPUT          reduce using rule 9 (statement -> for_stmt .)
    INPUT           reduce using rule 9 (statement -> for_stmt .)
    RETURN          reduce using rule 9 (statement -> for_stmt .)
    BREAK           reduce using rule 9 (statement -> for_stmt .)
    CONTINUE        reduce using rule 9 (statement -> for_stmt .)
    INT_TYPE        reduce using rule 9 (statement -> for_stmt .)
    FLOAT_TYPE      reduce using rule 9 (statement -> for_stmt .)
    STRING_TYPE     reduce using rule 9 (statement -> for_stmt .)
    BOOL_TYPE       reduce using rule 9 (statement -> for_stmt .)
    CHAR_TYPE       reduce using rule 9 (statement -> for_stmt .)
    VOID_TYPE       reduce using rule 9 (statement -> for_stmt .)
    FOR             reduce using rule 9 (statement -> for_stmt .)
    FUNC            reduce using rule 9 (statement -> for_stmt .)
    ADT             reduce using rule 9 (statement -> for_stmt .)
    $end            reduce using rule 9 (statement -> for_stmt .)
    ENDFOR          reduce using rule 9 (statement -> for_stmt .)
    ENDFUNC         reduce using rule 9 (statement -> for_stmt .)
    ENDIF           reduce using rule 9 (statement -> for_stmt .)
    ELSE            reduce using rule 9 (statement -> for_stmt .)
    ENDWHILE        reduce using rule 9 (statement -> for_stmt .)


state 10

    (10) statement -> output_stmt .
